[gd_scene load_steps=2 format=3 uid="uid://bhx30g576cjfc"]

[ext_resource type="Script" uid="uid://demun7a6ej2g0" path="res://notification_root.gd" id="1_t8ggs"]

[node name="NotificationRoot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 60.0
script = ExtResource("1_t8ggs")

[node name="ContentMask" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageLabel" type="RichTextLabel" parent="ContentMask"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
bbcode_enabled = true
text = "sdfafdasdf"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WhiteBar" type="ColorRect" parent="."]
layout_mode = 0
offset_bottom = 60.0

[node name="Timer" type="Timer" parent="."]
one_shot = true
